# MagicToolBox

./: README.md
src/MagicToolBox/: CMakeLists.txt  CMakeUserPresets.json  module.cmake
src/MagicToolBox/02_Plugins/MagicTools/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_Base64Converter/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_Base64Converter/src/: Base64Converter.cpp  Base64Converter.ui  Plugin_Base64Converter.cpp  Plugin_Base64Converter.h  main.cpp  stdafx.h
src/MagicToolBox/02_Plugins/MagicTools/Plugin_BinaryViewer/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_BinaryViewer/src/: BinaryViewer.cpp  BinaryViewer.ui  CustomTableModel.cpp  CustomTableModel.h  FileHandler.cpp  FileHandler.h  Plugin_BinaryViewer.cpp  Plugin_BinaryViewer.h  stdafx.h
src/MagicToolBox/02_Plugins/MagicTools/Plugin_ChartDemo/src/: BarChart.cpp  BarChart.h  ChartDemo.cpp  LineChart.cpp  LineChart.h  PercentBarChart.cpp  PercentBarChart.h  (+9 more)
src/MagicToolBox/02_Plugins/MagicTools/Plugin_CryptologyTool/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_CustomDelegateDemo/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_GraphicsViewDemo/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_IdentifyCardNumberChecker/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_MarkDownEditor/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_MediaPlayer/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_NetworkTool/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_PortScanner/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_QRCodeGenerator/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_RegularExpressionValidator/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_SerialPortDebugger/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_StyleSheetViewer/: CMakeLists.txt
src/MagicToolBox/02_Plugins/MagicTools/Plugin_XmlVisualEditor/: CMakeLists.txt
src/MagicToolBox/04_Tools/: CMakeLists.txt
src/MagicToolBox/04_Tools/MagicToolBox/: CMakeLists.txt
src/MagicToolBox/04_Tools/MagicToolBox/src/: MagicBox.cpp  MagicBox.h  MagicTool.cpp  MagicToolBox.cpp  MagicToolBox.h  MagicToolBox.ui  main.cpp  stdafx.h
src/MagicToolBox/Plugins/: CMakeLists.txt
src/MagicToolBox/Plugins/MagicTools/: CMakeLists.txt
src/MagicToolBox/Plugins/MagicTools/Plugin_ChartDemo/: CMakeLists.txt
src/MagicToolBox/Plugins/MagicTools/Plugin_DatabaseVisualizationTool/: CMakeLists.txt
src/MagicToolBox/Plugins/MagicTools/Plugin_JsonVisualEditor/: CMakeLists.txt
src/MagicToolBox/Tools/MagicToolBox/src/: main.cpp  stdafx.h
(+281 files in other folders)
