#add_subdirectory("")#
add_subdirectory("Plugin_Base64Converter")#
add_subdirectory("Plugin_BinaryViewer")#
add_subdirectory("Plugin_ChartDemo")#
add_subdirectory("Plugin_CryptologyTool")#
add_subdirectory("Plugin_CustomDelegateDemo")#
add_subdirectory("Plugin_DatabaseVisualizationTool")#
add_subdirectory("Plugin_GraphicsViewDemo")#
add_subdirectory("Plugin_IdentifyCardNumberChecker")#
add_subdirectory("Plugin_JsonVisualEditor")#
add_subdirectory("Plugin_MarkDownEditor")#
add_subdirectory("Plugin_MediaPlayer")#
add_subdirectory("Plugin_NetworkTool")#
add_subdirectory("Plugin_PortScanner")#
add_subdirectory("Plugin_QRCodeGenerator")#
add_subdirectory("Plugin_RegularExpressionValidator")#
